--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,19 @@
 aiohttp==1.2.0
 aiomysql==0.0.9
+appdirs==1.4.3
+argh==0.26.2
 async-timeout==1.1.0
 chardet==2.3.0
 Jinja2==2.8
+Markdown==2.6.8
 MarkupSafe==0.23
 multidict==2.1.4
+packaging==16.8
+pathtools==0.1.2
+Pygments==2.2.0
 PyMySQL==0.7.9
-yarl==0.8.1
+pyparsing==2.2.0
+python-markdown-math==0.3
+six==1.10.0
+watchdog==0.8.3
+yarl==0.10.1
